# athena_far-backward

./: .gitignore  CMakeLists.txt  README.md  athena_fb_only.xml  athena_with_fb.xml  print_hits.py  simrun.sh
devxml/: basic.xml  magnets_window.xml  tag1.xml  tag2.xml
src/: BackwardsBeamPipe_geo.cpp  BackwardsCollimator.cpp  BackwardsLumiVac_geo.cpp  BackwardsTagWin_geo.cpp  BackwardsVacBox_geo.cpp  BackwardsVacDrift_geo.cpp  BackwardsVacuumBox_geo.cpp  Timepix_geo.cpp
xml/: display.xml  fb_magnets.xml  fb_main.xml  lumi.xml  materials.xml  taggers.xml  vacuum.xml  vacuumnolumi.xml
